<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kristers.todo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_to_todo"
            app:destination="@id/nav_todo" />
    </fragment>

    <fragment
        android:id="@+id/nav_completed"
        android:name="com.kristers.todo.ui.completed.CompletedTodoFragment"
        android:label="@string/completedTodo"
        tools:layout="@layout/fragment_completed" >
        <action
            android:id="@+id/action_to_todo"
            app:destination="@id/nav_todo" />
    </fragment>

    <fragment
        android:id="@+id/nav_createNewTodo"
        android:name="com.kristers.todo.ui.new_todo.NewTodoFragment"
        android:label="@string/createNewTodo"
        tools:layout="@layout/fragment_create_new" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.kristers.todo.ui.todo.TodoFragment"
        android:label="@string/todo"
        tools:layout="@layout/fragment_todo" >
        <action
            android:id="@+id/action_nav_todo_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>